--- a/ProyectoWebApp/templates/ProyectoWebApp/base.html
+++ b/ProyectoWebApp/templates/ProyectoWebApp/base.html
@@ -47,9 +47,6 @@
           <li class="nav-item {% if request.path == '/' %}active{% endif %} px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="{% url "Home" %}">Inicio</a>
           </li>
-          <li class="nav-item {% if request.path == '/servicios/' %}active{% endif %} px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="{% url "Servicios" %}">Servicios</a>
-          </li>
           <li class="nav-item {% if request.path == '/contacto/' %}active{% endif %} px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="{% url "Contacto" %}">Contacto</a>
           </li>
@@ -58,7 +55,7 @@
             <a class="nav-link text-uppercase text-expanded" href="{% url "Tienda" %}">Tienda</a>
           </li>
           <li class="nav-item {% if request.path|slice:':6' == '/blog/' %}active{% endif %} px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="{% url "Blog" %}">Blog</a>
+            <a class="nav-link text-uppercase text-expanded" href="{% url "Blog" %}">Blogs</a>
           </li>
           {% else %}
           <li class="nav-item {% if request.path == '/autenticacion/' %}active{% endif %} px-lg-4">
