--- a/tienda/templates/carro/widget.html
+++ b/tienda/templates/carro/widget.html
@@ -82,7 +82,7 @@
 
             <td colspan="3" class="text-center" >
 
-                <a href="{% url "procesar_pedido" %}" class="btn btn-sm btn-success">Hacer pedido</a>
+                <a href="{% url "checkout" %}" class="btn btn-sm btn-success">Realizar Pago</a>
 
             </td>
 
