--- a/tienda/templates/emails/pedido.html
+++ b/tienda/templates/emails/pedido.html
@@ -44,7 +44,7 @@
           <tr>
             <td style="border: 1px solid #dddddd;">{{ item.producto.nombre }}</td>
             <td align="center" style="border: 1px solid #dddddd;">
-              <img src="{{ domain }}{{ item.producto.imagen.url|urlencode }}"
+              <img src="{{ item.producto.imagen.url }}"
                 alt="{{ item.producto.nombre }}"
                 style="width: 60px; height: 60px; object-fit: cover;">
 
